# LmaoApp

./: CMakeLists.txt  README.md  main.cpp
src/: Application.hpp  main.cpp
src/lib/: BasePage.hpp  HomePage.hpp  SettingPage.hpp
src/src_lib/: WindowSetup.hpp
